edit portfolio time frame

--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
         <main>
               <section id="resume-background">
                       <p  id="resume-text">It's not what you achieve, it's what you overcome.</p>
-                    <a id="btn-resume" href="https://drive.google.com/file/d/17LhCJl-9rNBltnaJ1JqfQwZ_GqGsBFpF/view?usp=sharing">Download My Resume</a>
+                    <a id="btn-resume" href="https://drive.google.com/file/d/16Y2etwdPf-QkqW1nfr2K0R6fpW2-onKf/view?usp=sharing">Download My Resume</a>
               </section>
               <section class="resumeList">
                 <table>
@@ -93,7 +93,7 @@
                                     <ul class="frameCool">
                                       <li class ="techSkill"> <h3>Wellesley Library </h3></li>
                                       <li>Robotics Volunteer </li>
-                                      <li>October 2017 - Present</li>
+                                      <li>October 2017 - May 2018</li>
                                       <li>- Teach the Microsoft Choreghaphe software to classes of between eight and twelve teenage robotics students, focusing on key components of how to design and build a robot</li>
                                       <li>- Support students in testing and troubleshooting of functional robots</li>
                                     </ul>
