edit project detail

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,8 @@
             <li>CS 248 Distcrete Mathematic </li>
             <li>CS 535 Computer Networking</li>
             <li>CS 575 Operating Systems</li>
+            <li>CS 673 Software Engineering</li>
+            <li>CS 695 Enterprise Cyber Security</li>
           </ul>
           <h3 class="boldText">Major-Related courses at Quincy College</h3>
           <ul class=courses>
@@ -66,12 +68,15 @@
             <h3 class="boldText">CS 579 Database Management SQL Simulation Amazon Database</h3>
             <a href="https://github.com/momokojung01/SQL" >
               <img src="images/SQL.PNG" class="picMe" alt="datagram-sql"></a>
-            <p class="bio">The term project for database management class
-
-            <p class="bio"> </p>
-            <p class='bio'>
-
-            </p>
+              <p class="bio">The project critieria  is based on series of use cases to descript the operation of database support . There are 4 main use cases:   </p>
+              <ul class="bio">
+                <li>New Product Use Cases</li>
+                <li>Project Delivery Use Cases</li>
+                <li>Product Purchase Use Cases</li>
+                <li>Product Purchase Use Cases</li>
+              </ul>
+              <p class="bio">For the project breakdown. I created ER diagram to show all the relationship between tables. After that, I defined DDL and insert all tuples into the tables.
+               The main requirement is DML scenarios. I create sql query and procedure query based on case scopes.  </p>
           </section>
         <section class="wrapframe" >
           <h3 class="boldText"> Summer 2018</h3>
