edit project details

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                 <li>New Product Use Cases</li>
                 <li>Project Delivery Use Cases</li>
                 <li>Product Purchase Use Cases</li>
-                <li>Product Purchase Use Cases</li>
+                <li>Product Shipement Use Cases</li>
               </ul>
               <p class="bio">For the project breakdown. I created ER diagram to show all the relationship between tables. After that, I defined DDL and insert all tuples into the tables.
                The main requirement is DML scenarios. I create sql query and procedure query based on case scopes.  </p>
